--- a/Fabulous Project.Rmd
+++ b/Fabulous Project.Rmd
@@ -6,3 +6,6 @@ output: html_notebook
 This is going to be our fabulous project notebook.
 
 I am going to add really cool boxplots here.
+
+This is where I put my descriptive statistics.
+
