Added inferential statistics

--- a/Fabulous Project.Rmd
+++ b/Fabulous Project.Rmd
@@ -6,3 +6,5 @@ output: html_notebook
 This is going to be our fabulous project notebook.
 
 I am going to add really cool boxplots here.
+
+I am going to add some inferential statistics here.
